[package]
name = "fedimint-derive"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-derive provides helper macros for serialization."
license = "MIT"

[lib]
proc-macro = true
name = "fedimint_derive"
path = "src/lib.rs"

[features]
diagnostics = []

[dependencies]
lightning = { version = "0.0.116", default-features = false, features = ["no-std"] }
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
